--- a/medical_analysis_clinic/packages.config
+++ b/medical_analysis_clinic/packages.config
@@ -36,5 +36,7 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="ToastNotifications" version="2.5.1" targetFramework="net472" />
+  <package id="ToastNotifications.Messages" version="2.5.1" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.7.0" targetFramework="net472" />
 </packages>
