--- a/medical_analysis_clinic/medical_analysis_clinic.csproj
+++ b/medical_analysis_clinic/medical_analysis_clinic.csproj
@@ -261,6 +261,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="TZ\ТЗ.docx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
